--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="src\Gui\Cursor">
       <UniqueIdentifier>{f1708bd0-daa3-40e8-a726-ecad6aff4efe}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\World\Prototypes">
+      <UniqueIdentifier>{24788ca8-6a6c-48e3-9ff1-9b9875f6f926}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Camera">
       <UniqueIdentifier>{9ca1cb00-08d7-487e-8b87-e2eec2f8af86}</UniqueIdentifier>
     </Filter>
@@ -66,6 +69,9 @@
     <ClCompile Include="Cursor.cpp">
       <Filter>src\Gui\Cursor</Filter>
     </ClCompile>
+    <ClCompile Include="Prototypes.cpp">
+      <Filter>src\World\Prototypes</Filter>
+    </ClCompile>
     <ClCompile Include="Camera.cpp">
       <Filter>src\Camera</Filter>
     </ClCompile>
@@ -103,6 +109,12 @@
     </ClInclude>
     <ClInclude Include="IApp.h">
       <Filter>src\App</Filter>
+    </ClInclude>
+    <ClInclude Include="StructurePrototype.h">
+      <Filter>src\World\Prototypes</Filter>
+    </ClInclude>
+    <ClInclude Include="Prototypes.h">
+      <Filter>src\World\Prototypes</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>src\Camera</Filter>
