(~) Moved 'TileSize' to the separate const

--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="Structure.h" />
     <ClInclude Include="StructurePrototype.h" />
     <ClInclude Include="Tile.h" />
+    <ClInclude Include="TileSize.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
