--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -4,9 +4,6 @@
     <Filter Include="src">
       <UniqueIdentifier>{7a7d8cac-6b3c-436f-94f6-6f85200b44f9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\SettingsProvider">
-      <UniqueIdentifier>{d0f687b7-45d6-49d1-a5ad-bc95219963af}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\App">
       <UniqueIdentifier>{e9b45ef6-8b71-4c8d-a70d-35f1b8052891}</UniqueIdentifier>
     </Filter>
@@ -34,6 +31,9 @@
     <Filter Include="src\Camera">
       <UniqueIdentifier>{9ca1cb00-08d7-487e-8b87-e2eec2f8af86}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Settings">
+      <UniqueIdentifier>{d0f687b7-45d6-49d1-a5ad-bc95219963af}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -46,7 +46,7 @@
       <Filter>src\App</Filter>
     </ClCompile>
     <ClCompile Include="SettingsProvider.cpp">
-      <Filter>src\SettingsProvider</Filter>
+      <Filter>src\Settings</Filter>
     </ClCompile>
     <ClCompile Include="World.cpp">
       <Filter>src\World</Filter>
@@ -88,7 +88,7 @@
       <Filter>src\App</Filter>
     </ClInclude>
     <ClInclude Include="SettingsProvider.h">
-      <Filter>src\SettingsProvider</Filter>
+      <Filter>src\Settings</Filter>
     </ClInclude>
     <ClInclude Include="World.h">
       <Filter>src\World</Filter>
@@ -126,8 +126,14 @@
     <ClInclude Include="Tile.h">
       <Filter>src\World</Filter>
     </ClInclude>
-    <ClInclude Include="TileSize.h">
-      <Filter>src\World</Filter>
+    <ClInclude Include="Fwd.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="ExternalSettings.h">
+      <Filter>src\Settings</Filter>
+    </ClInclude>
+    <ClInclude Include="InternalSettings.h">
+      <Filter>src\Settings</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
