--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="Door.cpp">
       <Filter>src\World\Structures</Filter>
     </ClCompile>
+    <ClCompile Include="Game_utils.cpp">
+      <Filter>src\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
