--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="Door.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Game_build.cpp" />
     <ClCompile Include="Game_input.cpp" />
     <ClCompile Include="Game_utils.cpp" />
     <ClCompile Include="Gui_create.cpp" />
