--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="Inventory.cpp">
       <Filter>src\Game\Gui\GuiControls</Filter>
     </ClCompile>
+    <ClCompile Include="Game_build.cpp">
+      <Filter>src\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
