--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -184,7 +184,7 @@
   <ItemGroup>
     <ClInclude Include="Actions.h" />
     <ClInclude Include="App.h" />
-    <ClInclude Include="Behaviors.h" />
+    <ClInclude Include="Traits.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="Door.h" />
