--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="Game_build.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
+    <ClCompile Include="Game_interact.cpp">
+      <Filter>src\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
