--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="Game_interact.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
+    <ClCompile Include="Panel.cpp">
+      <Filter>src\Game\Gui\GuiControls</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -178,6 +181,9 @@
     </ClInclude>
     <ClInclude Include="Traits.h">
       <Filter>src\Game\World\Prototypes</Filter>
+    </ClInclude>
+    <ClInclude Include="Panel.h">
+      <Filter>src\Game\Gui\GuiControls</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
