--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="Panel.cpp">
       <Filter>src\Game\Gui\GuiControls</Filter>
     </ClCompile>
+    <ClCompile Include="Button.cpp">
+      <Filter>src\Gui\GuiControls</Filter>
+    </ClCompile>
     <ClCompile Include="Gui_input.cpp">
       <Filter>src\Game\Gui</Filter>
     </ClCompile>
@@ -187,6 +190,9 @@
     </ClInclude>
     <ClInclude Include="Panel.h">
       <Filter>src\Game\Gui\GuiControls</Filter>
+    </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>src\Gui\GuiControls</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
