--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -13,31 +13,31 @@
     <Filter Include="src\Settings">
       <UniqueIdentifier>{d0f687b7-45d6-49d1-a5ad-bc95219963af}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Game\Gui">
-      <UniqueIdentifier>{ef52b4c2-6658-40d7-862b-41b13c3389a3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src\Game\Gui\GuiControls">
-      <UniqueIdentifier>{ba07a084-04a5-47c0-973a-9981834bcd07}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src\Game\Gui\Cursor">
-      <UniqueIdentifier>{f1708bd0-daa3-40e8-a726-ecad6aff4efe}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\Game\Camera">
       <UniqueIdentifier>{9ca1cb00-08d7-487e-8b87-e2eec2f8af86}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Game\World">
+    <Filter Include="src\Gui">
+      <UniqueIdentifier>{ef52b4c2-6658-40d7-862b-41b13c3389a3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Gui\GuiControls">
+      <UniqueIdentifier>{ba07a084-04a5-47c0-973a-9981834bcd07}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Gui\Cursor">
+      <UniqueIdentifier>{f1708bd0-daa3-40e8-a726-ecad6aff4efe}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\World">
       <UniqueIdentifier>{f7240feb-166d-48d4-a40a-53c5f865e5d3}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Game\World\Objects">
+    <Filter Include="src\World\Objects">
       <UniqueIdentifier>{4b805a66-8695-4d34-aa62-da6c5d8ba1a0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Game\World\Prototypes">
+    <Filter Include="src\World\Prototypes">
       <UniqueIdentifier>{24788ca8-6a6c-48e3-9ff1-9b9875f6f926}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Game\World\Structures">
+    <Filter Include="src\World\Structures">
       <UniqueIdentifier>{824638d1-11c5-4915-ae2a-824124b5818a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Game\World\Tile">
+    <Filter Include="src\World\Tile">
       <UniqueIdentifier>{16ebc7a1-eb12-4f62-ba7d-d83b3de44e7a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -55,52 +55,52 @@
       <Filter>src\Settings</Filter>
     </ClCompile>
     <ClCompile Include="World.cpp">
-      <Filter>src\Game\World</Filter>
+      <Filter>src\World</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
     <ClCompile Include="Object.cpp">
-      <Filter>src\Game\World\Objects</Filter>
+      <Filter>src\World\Objects</Filter>
     </ClCompile>
     <ClCompile Include="Gui.cpp">
-      <Filter>src\Game\Gui</Filter>
+      <Filter>src\Gui</Filter>
     </ClCompile>
     <ClCompile Include="Game_input.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
     <ClCompile Include="Cursor.cpp">
-      <Filter>src\Game\Gui\Cursor</Filter>
+      <Filter>src\Gui\Cursor</Filter>
     </ClCompile>
     <ClCompile Include="World_create.cpp">
-      <Filter>src\Game\World</Filter>
+      <Filter>src\World</Filter>
     </ClCompile>
     <ClCompile Include="Prototypes.cpp">
-      <Filter>src\Game\World\Prototypes</Filter>
+      <Filter>src\World\Prototypes</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
       <Filter>src\Game\Camera</Filter>
     </ClCompile>
     <ClCompile Include="Label.cpp">
-      <Filter>src\Game\Gui\GuiControls</Filter>
+      <Filter>src\Gui\GuiControls</Filter>
     </ClCompile>
     <ClCompile Include="Gui_create.cpp">
-      <Filter>src\Game\Gui</Filter>
+      <Filter>src\Gui</Filter>
     </ClCompile>
     <ClCompile Include="Structure.cpp">
-      <Filter>src\Game\World\Structures</Filter>
+      <Filter>src\World\Structures</Filter>
     </ClCompile>
     <ClCompile Include="Door.cpp">
-      <Filter>src\Game\World\Structures</Filter>
+      <Filter>src\World\Structures</Filter>
     </ClCompile>
     <ClCompile Include="Game_utils.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
     <ClCompile Include="Tile.cpp">
-      <Filter>src\Game\World\Tile</Filter>
+      <Filter>src\World\Tile</Filter>
     </ClCompile>
     <ClCompile Include="Inventory.cpp">
-      <Filter>src\Game\Gui\GuiControls</Filter>
+      <Filter>src\Gui\GuiControls</Filter>
     </ClCompile>
     <ClCompile Include="Game_build.cpp">
       <Filter>src\Game</Filter>
@@ -109,7 +109,7 @@
       <Filter>src\Game</Filter>
     </ClCompile>
     <ClCompile Include="Panel.cpp">
-      <Filter>src\Game\Gui\GuiControls</Filter>
+      <Filter>src\Gui\GuiControls</Filter>
     </ClCompile>
     <ClCompile Include="Game_states.cpp">
       <Filter>src\Game</Filter>
@@ -118,7 +118,7 @@
       <Filter>src\Gui\GuiControls</Filter>
     </ClCompile>
     <ClCompile Include="Gui_input.cpp">
-      <Filter>src\Game\Gui</Filter>
+      <Filter>src\Gui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -132,37 +132,37 @@
       <Filter>src\Settings</Filter>
     </ClInclude>
     <ClInclude Include="World.h">
-      <Filter>src\Game\World</Filter>
+      <Filter>src\World</Filter>
     </ClInclude>
     <ClInclude Include="Game.h">
       <Filter>src\Game</Filter>
     </ClInclude>
     <ClInclude Include="Object.h">
-      <Filter>src\Game\World\Objects</Filter>
+      <Filter>src\World\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Gui.h">
-      <Filter>src\Game\Gui</Filter>
+      <Filter>src\Gui</Filter>
     </ClInclude>
     <ClInclude Include="IGuiControl.h">
-      <Filter>src\Game\Gui\GuiControls</Filter>
+      <Filter>src\Gui\GuiControls</Filter>
     </ClInclude>
     <ClInclude Include="Cursor.h">
-      <Filter>src\Game\Gui\Cursor</Filter>
+      <Filter>src\Gui\Cursor</Filter>
     </ClInclude>
     <ClInclude Include="IApp.h">
       <Filter>src\App</Filter>
     </ClInclude>
     <ClInclude Include="StructurePrototype.h">
-      <Filter>src\Game\World\Prototypes</Filter>
+      <Filter>src\World\Prototypes</Filter>
     </ClInclude>
     <ClInclude Include="Prototypes.h">
-      <Filter>src\Game\World\Prototypes</Filter>
+      <Filter>src\World\Prototypes</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>src\Game\Camera</Filter>
     </ClInclude>
     <ClInclude Include="Label.h">
-      <Filter>src\Game\Gui\GuiControls</Filter>
+      <Filter>src\Gui\GuiControls</Filter>
     </ClInclude>
     <ClInclude Include="Fwd.h">
       <Filter>src</Filter>
@@ -177,22 +177,22 @@
       <Filter>src\Game</Filter>
     </ClInclude>
     <ClInclude Include="Structure.h">
-      <Filter>src\Game\World\Structures</Filter>
+      <Filter>src\World\Structures</Filter>
     </ClInclude>
     <ClInclude Include="Door.h">
-      <Filter>src\Game\World\Structures</Filter>
+      <Filter>src\World\Structures</Filter>
     </ClInclude>
     <ClInclude Include="Tile.h">
-      <Filter>src\Game\World\Tile</Filter>
+      <Filter>src\World\Tile</Filter>
     </ClInclude>
     <ClInclude Include="Inventory.h">
-      <Filter>src\Game\Gui\GuiControls</Filter>
+      <Filter>src\Gui\GuiControls</Filter>
     </ClInclude>
     <ClInclude Include="Traits.h">
-      <Filter>src\Game\World\Prototypes</Filter>
+      <Filter>src\World\Prototypes</Filter>
     </ClInclude>
     <ClInclude Include="Panel.h">
-      <Filter>src\Game\Gui\GuiControls</Filter>
+      <Filter>src\Gui\GuiControls</Filter>
     </ClInclude>
     <ClInclude Include="Button.h">
       <Filter>src\Gui\GuiControls</Filter>
