--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Game_build.cpp" />
     <ClCompile Include="Game_input.cpp" />
     <ClCompile Include="Game_interact.cpp" />
+    <ClCompile Include="Game_save.cpp" />
     <ClCompile Include="Game_states.cpp" />
     <ClCompile Include="Game_utils.cpp" />
     <ClCompile Include="Gui_create.cpp" />
