--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -183,6 +183,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Structure.cpp" />
+    <ClCompile Include="StructureReader.cpp" />
     <ClCompile Include="Structure_save.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Tile_save.cpp" />
@@ -195,6 +196,7 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Panel.h" />
+    <ClInclude Include="StructureReader.h" />
     <ClInclude Include="Traits.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cursor.h" />
