--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -173,6 +173,8 @@
     <ClCompile Include="Label.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Gui.cpp" />
+    <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Object_save.cpp" />
     <ClCompile Include="Panel.cpp" />
     <ClCompile Include="PrototypesCollection.cpp" />
     <ClCompile Include="SettingsProvider.cpp" />
@@ -195,6 +197,7 @@
     <ClInclude Include="Actions.h" />
     <ClInclude Include="App.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Panel.h" />
     <ClInclude Include="StructureReader.h" />
     <ClInclude Include="Traits.h" />
