--- a/SpaceExplorers/SpaceExplorers.vcxproj.filters
+++ b/SpaceExplorers/SpaceExplorers.vcxproj.filters
@@ -141,7 +141,7 @@
     <ClCompile Include="Object_save.cpp">
       <Filter>src\World\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="Game_avatar.cpp">
+    <ClCompile Include="Game_control.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
   </ItemGroup>
