--- a/SpaceExplorers/SpaceExplorers.vcxproj
+++ b/SpaceExplorers/SpaceExplorers.vcxproj
@@ -186,7 +186,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Structure.cpp" />
-    <ClCompile Include="StructureReader.cpp" />
+    <ClCompile Include="ObjectsReader.cpp" />
     <ClCompile Include="Structure_save.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Tile_save.cpp" />
@@ -200,7 +200,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Panel.h" />
-    <ClInclude Include="StructureReader.h" />
+    <ClInclude Include="ObjectsReader.h" />
     <ClInclude Include="Traits.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cursor.h" />
